# fix-lines

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml  release.yml
src/: lib.rs  main.rs
tests/: cli.rs
