[package]
name = "fix-lines"
version = "0.1.0"
edition = "2024"
description = "CLI tool to fix line endings, remove empty lines at the end of the file and insert a final new line."

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
log = "0.4.28"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
